Updated 7/2023, Resolved responsive alignment, resolved icon hover, resolved serach bar issue and fixed some known bugs

--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,5 @@ main h2 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 800;
     color: #B71540;
+    text-decoration: underline;
 }
