--- a/src/components/assets/footer.css
+++ b/src/components/assets/footer.css
@@ -1,6 +1,6 @@
 footer
 {
-    height: 260px;
+    height: 400px;
     background-color: #002137;
     display: flex;
     flex-direction: column;
