--- a/src/components/assets/menu.css
+++ b/src/components/assets/menu.css
@@ -26,6 +26,7 @@ nav .navbar-brand
 
 nav .navbar-brand:hover
 {
+    text-decoration: underline;
     color: #1F0032;
 }
 
