--- a/src/components/assets/movie.css
+++ b/src/components/assets/movie.css
@@ -5,7 +5,7 @@
     min-height: 380px;
     max-height: min-content;
     display: flex;
-    justify-content: center;
+    justify-content: center ;
     padding: 0px;
 }
 
@@ -68,7 +68,7 @@
     }
 
     .card {
-        width: 80% !important;
+        width: 100% !important;
     }
 
     .card img {
